[package]
name = "geometry_tools"
version = "0.4.2"
authors = ["ScanMountGoat"]
description = "Efficient computation of single precision geometric data"
license = "MIT"
documentation = "https://docs.rs/geometry_tools"
repository = "https://github.com/ScanMountGoat/geometry_tools"
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
glam = "0.23.0"
thiserror = "1.0"

[dev-dependencies]
approx = "0.4.0"
