[package]
name = "geometry_tools"
version = "0.5.0"
authors = ["ScanMountGoat"]
description = "Efficient computation of single precision geometric data"
license = "MIT"
documentation = "https://docs.rs/geometry_tools"
repository = "https://github.com/ScanMountGoat/geometry_tools"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
glam = "0.25.0"
thiserror = "1.0"

[dev-dependencies]
approx = "0.4.0"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "aabb_from_points"
harness = false

[[bench]]
name = "bounding_sphere_from_points"
harness = false

[[bench]]
name = "bounding_sphere_from_spheres"
harness = false

[[bench]]
name = "smooth_normals"
harness = false

[[bench]]
name = "tangents_bitangents"
harness = false

[[bench]]
name = "tangents"
harness = false
